Minor fixes in tests